--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "eslint": "^8.25.0",
     "express": "^4.18.2"
   },
