--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "eslint": "^8.25.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
