--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.20.1",
     "eslint": "^8.25.0",
     "express": "^4.18.2",
-    "express-validator": "^6.14.2"
+    "express-validator": "^6.14.2",
+    "mongodb": "^4.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
