--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.25.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
