--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.25.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongodb": "^4.11.0"
@@ -20,6 +19,10 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
+    "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
