--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
+    "prettier": "2.8.4",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20",
