--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -17,14 +18,15 @@
     "mongodb": "^4.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
-    "prettier": "2.8.4",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20",
+    "prettier": "2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
